# tts_papertrail

./: .gitignore  README.md  index.html  pyproject.toml  sandbox.py
.github/workflows/: run_tests_on_pr.yml
docs/: base.rst  easycacher.rst  excelerate.rst  index.rst  logger.rst
examples/: mission_report.docx  mission_report.html  mission_report.pptx  mission_report.xlsx  papertrail_demo_notebook.ipynb  ~$ssion_report.docx
latest/: easycacher.html  excelerate.html  genindex.html  logger.html
latest/.doctrees/: base.doctree  environment.pickle
main/: base.html  index.html  searchindex.js
main/.doctrees/: environment.pickle  index.doctree
main/api/: tts_papertrail.html
src/tts_papertrail/: base.py  excelerate.py  hypersonic.py  slidekick.py  wordsmith.py
src/tts_papertrail.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tts_papertrail/test/: test_base.py  test_excelerate.py  test_hypersonic.py  test_slidekick.py  test_wordsmith.py
v0.4.1/: .buildinfo  objects.inv  py-modindex.html  search.html
v0.4.1/.doctrees/: easycacher.doctree  excelerate.doctree  logger.doctree
v0.4.1/.doctrees/api/: modules.doctree  tts_papertrail.doctree
v0.4.1/_static/: documentation_options.js
v0.4.1/api/: modules.html
